--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             top: 60px;
             right: 20px;
             width: 200px;
-            background: rgba(0, 0, 0, 0.8);
+            background: rgba(0, 0, 0, 0.85);
             border: 2px solid #00ff00;
             padding: 15px;
             font-size: 8px;
@@ -251,7 +251,7 @@
             justify-content: space-between;
             align-items: center;
             padding: 0 20px;
-            z-index: 100;
+            z-index: 150;
         }
         
         .control-btn {
@@ -300,18 +300,51 @@
                 display: none;
             }
             .personality-panel {
-                top: 50px;
-                right: 10px;
-                left: 10px;
-                width: auto;
-                font-size: 7px;
-                padding: 10px;
+                top: 45px;
+                right: 5px;
+                left: auto;
+                width: 30%;
+                min-width: 140px;
+                font-size: 5px;
+                padding: 5px;
+                line-height: 1.4;
             }
             .personality-title {
-                font-size: 8px;
+                font-size: 5px;
+                margin-bottom: 5px;
+            }
+            .mbti-bar {
+                margin-bottom: 5px;
+            }
+            .mbti-bar-label {
+                font-size: 4px;
+                margin-bottom: 2px;
+            }
+            .mbti-bar-track {
+                height: 4px;
             }
             .mbti-current {
-                font-size: 9px;
+                font-size: 6px;
+                margin-top: 5px;
+                padding-top: 5px;
+            }
+            .game-ui {
+                padding: 8px;
+            }
+            .score-panel {
+                font-size: 7px;
+                flex-wrap: wrap;
+                width: 65%;
+            }
+            .score-panel > div {
+                margin-right: 8px;
+            }
+            .lives {
+                margin-top: 3px;
+            }
+            .life-icon {
+                width: 15px;
+                height: 9px;
             }
         }
         
